Add runtime check for JVM add-opens in BigQuery connector
BigQuery connector needs to open access to java.base/java.nio to use
Arrow serialization. Now the BigQueryConnectorModule verifies this
requirement at runtime and fails with a useful error message instead of
runtime errors.